tests/fail-list2.err
Fatal error: exception Failure("illegal assignment list@{bool} = list@{float} in l = @{0.1, 3, 4}")