tests/fail-list2.tu
int main()
{	
	list @{bool} l;
	new l;
	l = @{0.1, 3,4};

 	return 0;
 } 